<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/main">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.lab4.fragmets.CategoriesFragment"
        android:label="@string/recomendation"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_mainFragment_to_categoryFragmet"
            app:destination="@id/categoryFragmet"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragmet"
        android:name="com.example.lab4.fragmets.CategoryFragmet"
        android:label="@string/recomendation"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_categoryFragmet_to_elementFragment"
            app:destination="@id/elementFragment" />
    </fragment>
    <fragment
        android:id="@+id/elementFragment"
        android:name="com.example.lab4.fragmets.ElementFragment"
        android:label="@string/recomendation"
        tools:layout="@layout/fragment_element" />
    <fragment
        android:id="@+id/main"
        android:name="com.example.lab4.fragmets.Main"
        android:label="@string/main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.lab4.fragmets.AboutFragment"
        android:label="@string/About"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.lab4.fragmets.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>