<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmets.SettingsFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/M_merge"
        android:layout_marginTop="@dimen/M_merge"
        android:layout_marginEnd="@dimen/M_merge"
        android:text="@string/Theme"
        android:textSize="@dimen/text_S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/langRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/M_merge"
        android:layout_marginTop="@dimen/M_merge"
        android:layout_marginEnd="@dimen/M_merge"
        android:layout_marginBottom="@dimen/M_merge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeSwitch"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/radioButtonEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/En_button"
            android:textSize="@dimen/text_S" />

        <RadioButton
            android:id="@+id/radioButtonRu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ru_button"
            android:textSize="@dimen/text_S" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>